Fixed scrollbar issue with text-areas (#109)
* Fixed scrollbar issue with text-areas

* Reverted to matAutosize

--- a/src/app/components/generics/property-input/text-input.component.scss
+++ b/src/app/components/generics/property-input/text-input.component.scss
@@ -24,4 +24,10 @@
 
 mat-form-field {
   min-width: 100%;
+  line-height: normal;
+}
+
+textarea.mat-input-element {
+  padding: 0;
+  margin: 0;
 }
